# JPEG_storage

./: .130-梁嘉城-原片.jpg.icloud  .LJC07883.jpg.icloud  .LJC08238.jpg.icloud  .LJC_0344.jpg.icloud  .gitignore  LICENSE  README.md  ServiceConfig.xml  WorkingRecording.pptx  poster.pptx  poster1.0.docx  posterpic.pptx  ~$ster1.0.docx  ~$ster3.0.docx  ~$演示文稿1 [自动保存].pptx  演示文稿1.pptx
References/: .DSHomeWork2019.zip.icloud  .DSHomeWork2019的副本.zip.icloud  .DSHomeWork2019的副本2.zip.icloud
References/JPEGsnoop-1.8.0/: AboutDlg.cpp  AboutDlg.h  BatchDlg.cpp  BatchDlg.h  CntrItem.cpp  CntrItem.h  DbManageDlg.cpp  DbManageDlg.h  DbSigs.cpp  DbSigs.h  DbSubmitDlg.cpp  DbSubmitDlg.h  DecodeDetailDlg.cpp  DecodeDetailDlg.h  DecodeDicom.cpp  DecodeDicom.h  DecodeDicomTags.cpp  DecodePs.cpp  DecodePs.h  Dib.cpp  Dib.h  DocLog.cpp  DocLog.h  ExportDlg.cpp  ExportDlg.h  ExportTiffDlg.cpp  ExportTiffDlg.h  FileTiff.cpp  FileTiff.h  FolderDlg.h  General.cpp  General.h  HyperlinkStatic.cpp  HyperlinkStatic.h  ImgDecode.cpp  ImgDecode.h  JPEGsnoop.cpp  JPEGsnoop.h  JPEGsnoop.rc  JPEGsnoop.sln  (+50 more)
References/JPEGsnoop-1.8.0/res/: JPEGsnoop.manifest  JPEGsnoop.rc2
References/tinyjpegdecoder-20070609/: Makefile
backup/: closed1.0.c++
chunk_new/jpgpath4kbsrc/: CMakeLists.txt  Chunker.cpp  Chunker.hpp  config.json  cryptoPrimitive.hpp  dataSR.cpp  dataStructure.hpp  keyClient.hpp  main.cpp  recvDecode.cpp
chunk_new/openssl/: Makefile  configdata.pm  libcrypto.so.1.1  libssl.so.1.1
chunk_new/openssl/apps/: openssl
chunk_new/openssl/crypto/: buildinf.h
chunk_new/openssl/fuzz/: asn1-test  x509-test
chunk_new/openssl/test/: afalgtest  asn1_decode_test  bftest  (+103 more)
chunk_new/src/: CMakeLists.txt  Chunker.cpp  Chunker.h  configure.cpp  configure.h  configure.hpp  cryptoPrimitive.cpp  cryptoPrimitive.h  cryptoPrimitive.hpp  dataSR.hpp  dataStructure.h  keyClient.cpp  main.cpp  messageQueue.h  messageQueue.hpp  recvDecode.hpp  retriever.hpp  storageCore.cpp  storageCore.hpp
chunk_new/tetest/: configure.hpp  cryptoPrimitive.cpp  retriever.cpp  sender.cpp  sender.hpp  stdc++.h
chunktest2/: CMakeLists.txt
jpglittlesrc/: main.cpp
recodejpg/: main.cpp  setjmp.h  tinyjpeg-internal.h
show/: .第一阶段报告.pptx.icloud  abc.pptx  poster2.0.docx  poster3.0.docx  演示文稿1 [自动保存].pptx
src/: CMakeLists.txt  main.cpp  tinyjpeg-internal.h  train.txt
test/: .LJC08045.jpg.icloud  .LJC08045.jpg.jpg.icloud  .LJC08048.jpg.icloud  .LJC08048.jpg.jpg.icloud  .LJC08184.jpg.icloud  .LJC08184.jpg.jpg.icloud  LJC08139  a  aa  backup.c  canread.c  train.txt
testChunk/: CMakeLists.txt
testChunk/include/: chunker.hpp  configure.hpp  cryptoPrimitive.hpp  dataSR.hpp  dataStructure.hpp  database.hpp  dedupCore.hpp  keyClient.hpp  messageQueue.hpp  protocol.hpp  recvDecode.hpp  retriever.hpp  sender.hpp  socket.hpp  storageCore.hpp
testChunk/src/: CMakeLists.txt
testresult/: .app.jpg.dat.icloud  .app.jpg.icloud  .hey.jpg.dat.icloud  .hey.jpg.icloud
(+14 files in other folders)
